Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -95,7 +95,7 @@ stages:
                 containerRegistry: 'Azure Container Registery'
                 repository: 'acr-api'
                 command: 'buildAndPush'
-                Dockerfile: '**/Dockerfile'
+                Dockerfile: '**/DockerFile'
                 tags: '$(Build.BuildNumber)'
     - stage: Deploy
       condition: eq(variables['DoAzure'], 'true')
