--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -83,6 +83,10 @@ stages:
     - stage: Docker
       condition: eq(variables['DoDocker'], 'true')
       displayName: Docker
+      variables:
+        ACR: 'devopsacrdevon'
+        DockerResourceGroup: 'DevOps-ACR'
+        AzureKeyVaultName: '$(ACR)-vault'
       jobs:
         - job: 
           displayName: Docker Job
@@ -97,11 +101,35 @@ stages:
                 command: 'buildAndPush'
                 Dockerfile: '**/DockerFile'
                 tags: '$(Build.BuildNumber)'
+           - task: AzureCLI@2
+             displayName: 'Spin ACI Up'
+             inputs:
+               azureSubscription: 'Azure'
+               scriptType: 'ps'
+               scriptLocation: 'inlineScript'
+               inlineScript: |
+                 az keyvault create --resource-group $(DockerResourceGroup) --name $(AzureKeyVaultName)
+                 
+                 # Create service principal, store its password in AKV (the registry *password*)
+                 az keyvault secret set --vault-name $(AzureKeyVaultName) --name "$(ACR)-pull-pwd" --value $(az ad sp create-for-rbac --name "$(ACR)-pull" --scopes $(az acr show --name $(ACR) --query id --output tsv) --role acrpull --query password --output tsv)
+                 
+                 # Store service principal ID in AKV (the registry *username*)
+                 az keyvault secret set --vault-name $(AzureKeyVaultName) --name "$(ACR)-pull-usr" --value $(az ad sp show --id "http://$(ACR)-pull" --query appId --output tsv)
+                 
+                 az container create --resource-group $(DockerResourceGroup) --name acr-tasks1334 `
+                     --image "$(ACR).azurecr.io/acr-api:v1" `
+                     --registry-login-server "$(ACR).azurecr.io" `
+                     --registry-username $(az keyvault secret show --vault-name $(AzureKeyVaultName) --name "$(ACR)-pull-usr" --query value -o tsv) `
+                     --registry-password $(az keyvault secret show --vault-name $(AzureKeyVaultName) --name "$(ACR)-pull-pwd" --query value -o tsv) `
+                     --dns-name-label "acr-tasks234-$(ACR)" `
+                     --query "{FQDN:ipAddress.fqdn}" `
+                     --output table
+
     - stage: Deploy
       condition: eq(variables['DoAzure'], 'true')
       displayName: Deploy to Azure
       jobs:
-          - deployment: 
+          - deployment: Azure
             continueOnError: false
             environment: 'Development'
             variables:
@@ -112,7 +140,7 @@ stages:
                 AzureSubscription: 'Azure'
             strategy:
              runOnce:
-                 preDeploy:
+                 preDeploy: 
                   steps:
                   - task: AzurePowerShell@5
                     displayName: 'Create the Windows resources'
