--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -105,7 +105,7 @@ stages:
              displayName: 'Spin ACI Up'
              inputs:
                azureSubscription: 'Azure'
-               scriptType: 'ps'
+               scriptType: 'pscore'
                scriptLocation: 'inlineScript'
                inlineScript: |
                  az keyvault create --resource-group $(DockerResourceGroup) --name $(AzureKeyVaultName)
