--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -87,6 +87,7 @@ stages:
         ACR: 'devopsacrdevon'
         DockerResourceGroup: 'DevOps-ACR'
         AzureKeyVaultName: '$(ACR)-vault'
+        ACIName: 'devon-aci-api'
       jobs:
         - job: 
           displayName: Docker Job
@@ -116,12 +117,12 @@ stages:
                  # Store service principal ID in AKV (the registry *username*)
                  az keyvault secret set --vault-name $(AzureKeyVaultName) --name "$(ACR)-pull-usr" --value $(az ad sp show --id "http://$(ACR)-pull" --query appId --output tsv)
                  
-                 az container create --resource-group $(DockerResourceGroup) --name acr-tasks1334 `
-                     --image "$(ACR).azurecr.io/acr-api:v1" `
+                 az container create --resource-group $(DockerResourceGroup) --name "$(ACIName)" `
+                     --image "$(ACR).azurecr.io/acr-api:$(Build.BuildNumber)" `
                      --registry-login-server "$(ACR).azurecr.io" `
                      --registry-username $(az keyvault secret show --vault-name $(AzureKeyVaultName) --name "$(ACR)-pull-usr" --query value -o tsv) `
                      --registry-password $(az keyvault secret show --vault-name $(AzureKeyVaultName) --name "$(ACR)-pull-pwd" --query value -o tsv) `
-                     --dns-name-label "acr-tasks234-$(ACR)" `
+                     --dns-name-label "$(ACIName)" `
                      --query "{FQDN:ipAddress.fqdn}" `
                      --output table
 
