--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,12 @@ stages:
               - task: NuGetToolInstaller@1
 
               - checkout: git://DevOps/testing
+                path: pipelinescripts
+                clean: false
+                
               - checkout: git://DevOps/testing@refs/heads/feature/new-branch
+                path: branch-location
+                clean: true
               - task: NuGetCommand@2
                 displayName: 'Restore Nuget Packages'
                 inputs:
