--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,10 +28,10 @@ stages:
               - task: NuGetToolInstaller@1
 
               - checkout: git://DevOps/testing
-                clean: false
+                clean: true
                 
-              # - checkout: git://DevOps/testing@refs/heads/feature/new-branch
-              #   clean: true
+              - checkout: git://DevOps/testing2
+                clean: true
                 
               - task: PowerShell@2
                 displayName: 'Calling the script'
